# stackage

./: .dir-locals.el  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  Bosch-CA-DE.crt  CODE_OF_CONDUCT.md  CURATORS.md  ChangeLog.md  DATA-FLOW.md  Dockerfile  LICENSE  MAINTAINERS.md  README-Debian.md  README.md  ROADMAP  ROADMAP.md  allowed.txt  become-a-curator.md  build-constraints.yaml  build_image.sh  cabal.config  check  check-lts  commenter  create-stackage-tarball.sh  debian-bootstrap.sh  full-run.sh  jenkins-build.sh  jenkins-nightly.sh  local_nightly.sh  lts-build-constraints.yaml  package-list.txt  stackage-upload.hs  stackage.cabal  verify-package
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/workflows/: check.yml  image.yml
Development/Shake/: FilePath.hs
Stackage/: Build.hs  BuildConstraints.hs  BuildPlan.hs  CheckBuildPlan.hs  CheckCabalVersion.hs  CheckPlan.hs  CompleteBuild.hs  Config.hs  CorePackages.hs  GhcPkg.hs  GithubPings.hs  HaskellPlatform.hs  Init.hs  InstallBuild.hs  InstallInfo.hs  LoadDatabase.hs  ModuleNameConflict.hs  NarrowDatabase.hs  PackageDescription.hs  PackageIndex.hs  PackageList.hs  PerformBuild.hs  Prelude.hs  Select.hs  ServerBundle.hs  ServerFiles.hs  ShakeBuild.hs  Tarballs.hs  Test.hs  Types.hs  UpdateBuildPlan.hs  Upload.hs  Uploads.hs  Util.hs
Stackage2/: BuildConstraints.hs  BuildPlan.hs  CheckBuildPlan.hs  CompleteBuild.hs  ConstraintFile.hs  CorePackages.hs  GithubPings.hs  PackageConstraints.hs  PackageDescription.hs  PackageIndex.hs  PerformBuild.hs  Prelude.hs  ProposedPlan.hs  ServerBundle.hs  UpdateBuildPlan.hs  Upload.hs
app/: gen-install-line.hs  lts-bump.hs  lts-major-bump.hs  lts-minor-bump.hs  stackage-nightly.hs  stackage.hs
automated/: .gitignore  build-next.sh  build.sh  check-cabal.sh  cron.sh  nightly.sh  run-lts.sh  run-nightly.sh
automated/dockerfiles/: README.md  build.sh
automated/dockerfiles/lts-15.0/: Dockerfile
automated/dockerfiles/lts-15.10/: Dockerfile
automated/dockerfiles/lts-15.5/: Dockerfile
automated/dockerfiles/lts-16.0/: Dockerfile
automated/dockerfiles/lts-16.12/: Dockerfile
automated/dockerfiles/lts-16.8/: Dockerfile
automated/dockerfiles/lts-17.0/: Dockerfile
automated/dockerfiles/lts-17.10/: Dockerfile
automated/dockerfiles/lts-17.3/: Dockerfile
automated/dockerfiles/lts-18.0/: Dockerfile
automated/dockerfiles/lts-18.27/: Dockerfile
automated/dockerfiles/lts-18.7/: Dockerfile
automated/dockerfiles/lts-18.9/: Dockerfile
automated/dockerfiles/lts-19.0/: Dockerfile
automated/dockerfiles/lts-20.0/: Dockerfile
automated/dockerfiles/lts-21.0/: Dockerfile
automated/dockerfiles/lts-21.12/: Dockerfile
automated/dockerfiles/lts-21.22/: Dockerfile
automated/dockerfiles/lts-21.6/: Dockerfile
automated/dockerfiles/lts-21.7/: Dockerfile
automated/dockerfiles/lts-22.0/: Dockerfile
automated/dockerfiles/lts-22.21/: Dockerfile
automated/dockerfiles/lts-22.28/: Dockerfile
automated/dockerfiles/lts-22.29/: Dockerfile
automated/dockerfiles/lts-22.44/: Dockerfile
automated/dockerfiles/lts-22.7/: Dockerfile
automated/dockerfiles/lts-23.0/: Dockerfile
automated/new-stackage-format/: convert.sh
automated/nix-build/: README.md  build.sh  nixpkgs-src.json  snapshot-fixed.nix
docker/: 01-build-server.sh  02-apt-get-install.sh  03-custom-install.sh  04-cleanup.sh
etc/: check.sh  ci-script.sh  curator-2-check.sh
etc/commenter/: .gitignore  Cargo.toml  README.md  commenter
etc/commenter/latest-version/: LICENSE  README.md  cabal.project  latest-version.cabal
etc/commenter/latest-version/src/: Main.hs
etc/commenter/src/: lib.rs  main.rs
etc/curator-exes/: Dockerfile  README.md  run.sh  stack.yaml
etc/diskspace/: clean-old-stack-libs.sh  remove-old-stack-work-libs.hs
etc/lts-constraints/: LICENSE  README.md  cabal.project  lts-constraints.cabal  stack.yaml
etc/lts-constraints/src/: BuildConstraints.hs  Main.hs  Snapshot.hs  Types.hs
patching/: .gitignore
patching/patches/: BiobaseTurner-0.3.1.1.patch  BlogLiterately-0.7.1.7.patch  BlogLiterately-diagrams-0.1.4.2.patch  ChasingBottoms-1.3.0.7.patch  HTF-0.11.0.0.patch  MFlow-0.3.3.patch  MFlow-0.4.4.patch  MFlow-0.4.5.4.patch  MusicBrainz-0.2.1.patch  Octree-0.5.2.patch  Octree-0.5.3.patch  arbtt-0.8.1.patch  async-2.0.1.4.patch  async-2.0.1.5.patch  authenticate-oauth-1.4.0.8.patch  aws-0.10.3.patch  aws-0.8.3.patch  aws-0.8.5.patch  aws-0.8.6.patch  aws-0.9.3.patch  bson-0.2.3.patch  bson-0.2.4.patch  bytes-0.11.3.patch  bytes-0.11.4.patch  bytes-0.14.0.1.patch  bytes-0.14.patch  bzlib-conduit-0.2.1.1.patch  cairo-0.12.4.patch  cereal-conduit-0.7.2.patch  checkers-0.3.2.patch  concurrent-extra-0.7.0.6.patch  courier-0.1.0.12.patch  criterion-0.8.0.1.patch  criterion-0.8.0.2.patch  criterion-1.0.0.2.patch  csv-conduit-0.6.2.1.patch  diagrams-builder-0.5.0.10.patch  diagrams-builder-0.5.0.6.patch  diagrams-builder-0.5.0.9.patch  diagrams-builder-0.6.patch  (+90 more)
patching/scripts/: create-patches.sh  create-tarballs.sh  edit-package.sh
stackage/: ChangeLog.md  LICENSE  README.md  stackage.cabal
stackage/Stackage/: Dummy.hs
test/: full-build-constraints.yaml  test-build-constraints.yaml
test/Stackage/: BuildPlanSpec.hs  CorePackagesSpec.hs  PackageIndexSpec.hs
test/Stackage2/: BuildPlanSpec.hs  CorePackagesSpec.hs  PackageIndexSpec.hs
tmp.Y9zi/postgresql-typed-0.6.2.3/: COPYING  README.md  postgresql-typed.cabal  stack.yaml
tmp.Y9zi/postgresql-typed-0.6.2.3/.stack-work/: stack.sqlite3
tmp.Y9zi/postgresql-typed-0.6.2.3/Database/PostgreSQL/: Typed.hs
tmp.Y9zi/postgresql-typed-0.6.2.3/Database/PostgreSQL/Typed/: Array.hs  Dynamic.hs  Enum.hs  ErrCodes.hs  HDBC.hs  Inet.hs  Protocol.hs  Query.hs  Range.hs  Relation.hs  SQLToken.hs  TH.hs  TemplatePG.hs  TypeCache.hs  Types.hs
tmp.Y9zi/postgresql-typed-0.6.2.3/test/: Bench.hs  Connect.hs  Main.hs
tmp.Y9zi/postgresql-typed-0.6.2.3/test/hdbc/: SpecificDB.hs  TestMisc.hs  TestSbasics.hs  TestTime.hs  TestUtils.hs  Testbasics.hs  Tests.hs  runtests.hs
(+4 files in other folders)
