name:                stackage
version:             0.1.0.0
synopsis:            "Stable Hackage," tools for creating a vetted set of packages from Hackage.
-- description:         
homepage:            https://github.com/fpco/stackage
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@fpcomplete.com
category:            Distribution
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  exposed-modules:     Stackage.NarrowDatabase
                       Stackage.LoadDatabase
                       Stackage.ModuleNameConflict
                       Stackage.Util
                       Stackage.Types
                       Stackage.Config
                       Stackage.InstallInfo
                       Stackage.CheckPlan
                       Stackage.Tarballs
                       Stackage.Test
                       Stackage.Build
                       Stackage.Init
                       Stackage.BuildPlan
                       Stackage.CheckCabalVersion
                       Stackage.Select
                       Stackage.GhcPkg
                       Stackage.ServerFiles

                       Stackage2.Prelude
                       Stackage2.BuildConstraints
                       Stackage2.CorePackages
                       Stackage2.PackageIndex
                       Stackage2.BuildPlan
                       Stackage2.CheckBuildPlan
                       Stackage2.UpdateBuildPlan
                       Stackage2.GithubPings
                       Stackage2.PackageDescription
                       Stackage2.ServerBundle
                       Stackage2.Upload
                       Stackage2.PerformBuild
                       Stackage2.CompleteBuild
  build-depends:       base >= 4 && < 5
                     , containers
                     , Cabal >= 1.14
                     , tar >= 0.3
                     , zlib
                     , bytestring
                     , directory
                     , filepath
                     , transformers
                     , process
                     , old-locale
                     , time
                     , utf8-string

                     , conduit-extra
                     , classy-prelude-conduit
                     , text
                     , system-fileio
                     , system-filepath
                     , mtl
                     , aeson
                     , yaml
                     , unix-compat
                     , http-client
                     , temporary
                     , data-default-class
                     , stm
                     , mono-traversable
                     , async
                     , streaming-commons >= 0.1.7.1

executable stackage
  default-language:    Haskell2010
  hs-source-dirs:      app
  main-is:             stackage.hs
  build-depends:       base
                     , stackage
                     , containers

executable stackage-nightly
  default-language:    Haskell2010
  hs-source-dirs:      app
  main-is:             stackage-nightly.hs
  build-depends:       base
                     , stackage

executable lts-bump
  default-language:    Haskell2010
  hs-source-dirs:      app
  main-is:             lts-bump.hs
  build-depends:       base
                     , stackage

test-suite spec
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Stackage2.CorePackagesSpec
                       Stackage2.PackageIndexSpec
                       Stackage2.BuildPlanSpec
  build-depends:       base
                     , stackage
                     , hspec
                     , QuickCheck
                     , text
                     , classy-prelude-conduit
                     , Cabal
                     , yaml
                     , containers

source-repository head
  type:     git
  location: https://github.com/fpco/stackage
