name:                stackage
version:             0.3.0.1
synopsis:            "Stable Hackage," tools for creating a vetted set of packages from Hackage.
description:         Please see <http://www.stackage.org/package/stackage> for a description and documentation.
homepage:            https://github.com/fpco/stackage
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@fpcomplete.com
category:            Distribution
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     ChangeLog.md

library
  default-language:    Haskell2010
  exposed-modules:     Stackage.Prelude
                       Stackage.BuildConstraints
                       Stackage.CorePackages
                       Stackage.PackageIndex
                       Stackage.BuildPlan
                       Stackage.CheckBuildPlan
                       Stackage.UpdateBuildPlan
                       Stackage.GithubPings
                       Stackage.PackageDescription
                       Stackage.ServerBundle
                       Stackage.Upload
                       Stackage.PerformBuild
                       Stackage.CompleteBuild
  build-depends:       base >= 4 && < 5
                     , containers
                     , Cabal >= 1.14
                     , tar >= 0.3
                     , zlib
                     , bytestring
                     , directory
                     , filepath
                     , transformers
                     , process
                     , old-locale
                     , time
                     , utf8-string

                     , conduit-extra
                     , classy-prelude-conduit
                     , text
                     , system-fileio
                     , system-filepath
                     , mtl
                     , aeson
                     , yaml
                     , unix-compat
                     , http-client
                     , http-client-tls
                     , temporary
                     , data-default-class
                     , stm
                     , mono-traversable
                     , async
                     , streaming-commons >= 0.1.7.1
                     , semigroups
                     , xml-conduit

executable stackage
  default-language:    Haskell2010
  hs-source-dirs:      app
  main-is:             stackage.hs
  build-depends:       base
                     , stackage
  ghc-options:         -rtsopts -threaded -with-rtsopts=-N

test-suite spec
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Stackage.CorePackagesSpec
                       Stackage.PackageIndexSpec
                       Stackage.BuildPlanSpec
  build-depends:       base
                     , stackage
                     , hspec
                     , QuickCheck
                     , text
                     , classy-prelude-conduit
                     , Cabal
                     , yaml
                     , containers
                     , http-client
                     , http-client-tls

source-repository head
  type:     git
  location: https://github.com/fpco/stackage
