name:                stackage
version:             0.5.2
synopsis:            "Stable Hackage," tools for creating a vetted set of packages from Hackage.
description:         Please see <http://www.stackage.org/package/stackage> for a description and documentation.
homepage:            https://github.com/fpco/stackage
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@fpcomplete.com
category:            Distribution
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     ChangeLog.md
                     test/test-build-constraints.yaml

library
  default-language:    Haskell2010
  exposed-modules:     Stackage.Prelude
                       Stackage.BuildConstraints
                       Stackage.CorePackages
                       Stackage.PackageIndex
                       Stackage.BuildPlan
                       Stackage.CheckBuildPlan
                       Stackage.UpdateBuildPlan
                       Stackage.GithubPings
                       Stackage.InstallBuild
                       Stackage.PackageDescription
                       Stackage.ServerBundle
                       Stackage.Upload
                       Stackage.PerformBuild
                       Stackage.ShakeBuild
                       Stackage.CompleteBuild
  other-modules:
                       Development.Shake.FilePath
  build-depends:
                         Cabal >= 1.14
                       , aeson
                       , async
                       , base >= 4 && < 5
                       , bytestring
                       , classy-prelude-conduit
                       , conduit
                       , conduit-extra
                       , containers
                       , data-default-class
                       , directory
                       , filepath
                       , http-client
                       , http-client-tls
                       , mono-traversable
                       , mtl
                       , old-locale
                       , process
                       , semigroups
                       , shake
                       , stm
                       , streaming-commons >= 0.1.7.1
                       , system-fileio
                       , system-filepath
                       , tar >= 0.3
                       , temporary
                       , text
                       , time
                       , transformers
                       , unix-compat
                       , utf8-string
                       , xml-conduit
                       , yaml
                       , zlib

executable stackage
  default-language:    Haskell2010
  hs-source-dirs:      app
  main-is:             stackage.hs
  build-depends:       base
                     , stackage
                     , optparse-applicative >= 0.11
                     , system-filepath
  ghc-options:         -rtsopts -threaded -with-rtsopts=-N

test-suite spec
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Stackage.CorePackagesSpec
                       Stackage.PackageIndexSpec
                       Stackage.BuildPlanSpec
  build-depends:       base
                     , stackage
                     , hspec
                     , QuickCheck
                     , text
                     , classy-prelude-conduit
                     , Cabal
                     , yaml
                     , containers
                     , http-client
                     , http-client-tls

source-repository head
  type:     git
  location: https://github.com/fpco/stackage
