[package]
name = "commenter"
version = "0.2.0"
authors = ["Adam Bergmark <adam@bergmark.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy-regex = "2.2.1"
regex = "1.5.4"
serde = { version = "1.0.133", features = ["derive"] }
serde_yaml = "0.8.23"
structopt = "0.3.25"
