name:                lts-constraints
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/lts-constraints#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable lts-constraints
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , pantry
                     , Cabal
                     , rio
                     , containers
                     , parsec
                     , mtl
                     , aeson
                     , yaml
                     , split
                     , string-conversions
                     , safe
                     , mtl
                     , transformers
