name:               lts-constraints
version:            0.1.0.0

-- synopsis:
-- description:
homepage:           https://github.com/githubuser/lts-constraints#readme
license:            BSD3
license-file:       LICENSE
author:             Author name here
maintainer:         example@example.com
copyright:          2021 Author name here
category:           Web
build-type:         Simple
cabal-version:      >=1.10
extra-source-files: README.md

executable lts-constraints
  ghc-options:      -Wall
  hs-source-dirs:   src
  main-is:          Main.hs
  default-language: Haskell2010
  other-modules:
    BuildConstraints
    Snapshot
    Types

  build-depends:
      aeson
    , base                >=4.7 && <5
    , Cabal
    , containers
    , mtl
    , pantry
    , parsec
    , rio
    , safe
    , split
    , string-conversions
    , text
    , transformers
    , yaml
