name:                latest-version
version:             0.1.0.0
homepage:            https://github.com/githubuser/latest-version#readme
license:             BSD3
license-file:        LICENSE
author:              Adam Bergmark
maintainer:          adam@bergmark.nl
copyright:           2021 Adam Bergmark
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable latest-version
  ghc-options:         -Wall -threaded
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , pantry
                     , Cabal
                     , rio
                     , containers
